# NOR-DeepBlue

./: README.md
Homework1/: CMakeLists.txt  README.md  main.cpp
Homework1/include/: GradientDescentSolver.h
Homework1/src/: GradientDescentSolver.cpp
